--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeatherApp</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main class="main-container">
+
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
