--- a/index.html
+++ b/index.html
@@ -86,7 +86,25 @@
             </div>
         </section>
 
-        <section class="search-city section-message"></section>
+        <section class="search-city section-message">
+            <img src="assets/message/search-city.png">
+             <div>
+                <h1>Search City</h1>
+                <h4 class="regular-txt">
+                    Find out the weather conditions of the city
+                </h4>
+             </div>
+        </section>
+
+        <section class="not-found section-message" style="display: none;">
+            <img src="assets/message/not-found.png">
+             <div>
+                <h1>Search City</h1>
+                <h4 class="regular-txt">
+                    Find out the weather conditions of the city
+                </h4>
+             </div>
+        </section>
     </main>
     <script src="script.js"></script>
 </body>
