--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </section>
 
         <section class="search-city section-message">
-            <img src="assets/message/search-city.png">
+            <img src="assets/message/search-city.png" alt="search-city-svg">
              <div>
                 <h1>Search City</h1>
                 <h4 class="regular-txt">
